test/example/controller/error/404.js
module.exports = {
  get: (controller) => {
    controller.finisher.notfound('NOTFOUND');
  }
};
